--- a/public/css/vertical-layout-light/style.css
+++ b/public/css/vertical-layout-light/style.css
@@ -28630,7 +28630,7 @@ div.tagsinput span.tag a {
   margin: 0;
 }
 
-.sidebar .nav:not(.sub-menu) > .nav-item > .nav-link[aria-expanded="true"] {
+body:not(.sidebar-icon-only) .sidebar .nav:not(.sub-menu) > .nav-item > .nav-link[aria-expanded="true"] {
   border-radius: 8px 8px 0 0;
   background: #4B49AC;
   color: #fff;
@@ -28647,6 +28647,8 @@ div.tagsinput span.tag a {
   padding: 0.25rem 0 0 3.07rem;
   background: #4B49AC;
   padding-bottom: 12px;
+  border-bottom-left-radius: 8px;
+  border-bottom-right-radius: 8px;
 }
 
 .sidebar .nav.sub-menu .nav-item {
