--- a/src/components/TableLoading/style.css
+++ b/src/components/TableLoading/style.css
@@ -1,19 +1,20 @@
 .table-loading td,.table-loading th {
     background-color: rgb(194, 194, 194);
     width: 200px;
+    height: 70px;
     animation: fading 1.5s infinite;
     margin: 25px;
     border: solid 5px white !important;
+    border-radius: 10px;
   }
-  
   
   @keyframes fading {
     0% {
-      background-color: rgb(194, 194, 194)
+      background-color: rgb(197, 197, 197)
     }
     
     50% {
-      background-color: rgba(223, 223, 223, 0.699)
+      background-color: rgba(223, 223, 223, 0.5)
     }
     
     100% {
