--- a/src/pages/Helps/HelpData/style.css
+++ b/src/pages/Helps/HelpData/style.css
@@ -1,3 +1,8 @@
 .collapse img {
     max-width: 100%;
 }
+
+/* .help-menu:hover {
+    box-shadow: 12px 12px 2px 1px rgb(218, 234, 174);
+    outline: 2px solid #57b657;
+} */
