update popup sebelum sedudah

--- a/src/pages/SimulasiMap/simulasi.css
+++ b/src/pages/SimulasiMap/simulasi.css
@@ -105,3 +105,79 @@
   white-space: normal;
 }
 /* end table in popup */
+
+/* start popup sebelumsesudah */
+div.switch-sebelum-sesudah {
+  background-color: #4a49ac;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 10vh;
+  font-family: sans-serif;
+}
+
+.switch-button {
+  background: rgba(50, 49, 126, 0.56);
+  border-radius: 30px;
+  overflow: hidden;
+  width: 240px;
+  text-align: center;
+  font-size: 12px;
+  letter-spacing: 1px;
+  color: #fff;
+  position: relative;
+  padding-right: 120px;
+  position: relative;
+}
+.switch-button:before {
+  content: "Sesudah";
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  right: 0;
+  width: 120px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  z-index: 3;
+  pointer-events: none;
+}
+.switch-button-checkbox {
+  cursor: pointer;
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  height: 100%;
+  opacity: 0;
+  z-index: 2;
+}
+.switch-button-checkbox:checked + .switch-button-label:before {
+  transform: translateX(120px);
+  transition: transform 300ms linear;
+}
+.switch-button-checkbox + .switch-button-label {
+  position: relative;
+  padding: 10px 0;
+  display: block;
+  user-select: none;
+  pointer-events: none;
+}
+.switch-button-checkbox + .switch-button-label:before {
+  content: "";
+  background: #98bdeb;
+  height: 100%;
+  width: 100%;
+  position: absolute;
+  left: 0;
+  top: 0;
+  border-radius: 30px;
+  transform: translateX(0);
+  transition: transform 300ms;
+}
+.switch-button-checkbox + .switch-button-label .switch-button-label-span {
+  position: relative;
+}
+
+/* end popup sebelumsesudah */
