Change history list style and add history list functionality

--- a/src/pages/SimulasiMap/simulasi.css
+++ b/src/pages/SimulasiMap/simulasi.css
@@ -286,7 +286,7 @@ div.segementation-container {
   background: #f8fafc;
 }
 div.historyListDesc {
-  background-color: #dc4a38;
+  background-color: #282f3a;
   color: #fff;
   display: flex;
   flex-direction: row;
