Integrate comparison with SimulationTable, add widget, popup, and segmentation to SimulationHistory, fix faq styling, fix body styling to make comparison dive be sticky

--- a/public/css/vertical-layout-light/style.css
+++ b/public/css/vertical-layout-light/style.css
@@ -19668,7 +19668,7 @@ address p {
 /* Miscellanoeous */
 body,
 html {
-  overflow-x: hidden;
+  /* overflow-x: hidden; */
   padding-right: 0 !important;
 }
 
